--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 [submodule "app"]
 	path = app
-	url = github.com:Julie-b35/PyCabine.git
+	url = https://github.com/Julie-b35/PyCabine.git
 	branch = develop
+	ignore = all
