--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Contruire the test_cabine Docker image
-      run: 
+      run: |
         docker build . --tag ghcr.io/julie-b35/test_cabine:latest
         docker run ghcr.io/julie-b35/test_cabine:latest
         docker push ghcr.io/julie-b35/test_cabine:latest
