--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.8'
 
 services:
-  pycabine:
+  test:
+    volumes:
+      - .:/test
     build:
       context: .
-      dockerfile: Dockerfile
-    environment:
-      - PYTHONUNBUFFERED=1
-    entrypoint: entrypoint.sh
+      dockerfile: Dockerfile.test
+    entrypoint: entrypoint
