--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   test:
     volumes:
-      - .:/test
+      - ./app:/app
     build:
       context: .
       dockerfile: Dockerfile.test
